--- a/src/simple_controller/config/control.yaml
+++ b/src/simple_controller/config/control.yaml
@@ -1,16 +1,21 @@
-husky_joint_publisher:
+kernel_joint_publisher:
   type: "joint_state_controller/JointStateController"
   publish_rate: 50
 
-husky_velocity_controller:
+kernel_velocity_controller:
   type: "diff_drive_controller/DiffDriveController"
-  left_wheel: ['front_left_wheel', 'rear_left_wheel']
-  right_wheel: ['front_right_wheel', 'rear_right_wheel']
+  left_wheel: ['joint_left_wheel', 'joint_back_left_wheel']
+  right_wheel: ['joint_back_right_wheel', 'joint_back_right_wheel']
   publish_rate: 50
   pose_covariance_diagonal: [0.001, 0.001, 0.001, 0.001, 0.001, 0.03]
   twist_covariance_diagonal: [0.001, 0.001, 0.001, 0.001, 0.001, 0.03]
   cmd_vel_timeout: 0.25
   velocity_rolling_window_size: 2
+  wheel_separation : 0.4
+  wheel_radius : 0.1
+  odom_frame_id: odom
+  enable_odom_tf: true
+  estimate_velocity_from_position: false
 
   # Base frame_id
   base_frame_id: link_chassis
